k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hive-box-deployment
  labels:
    app: hive-box
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hive-box
  template:
    metadata:
      labels:
        app: hive-box
    spec:
      containers:
        - name: hive-box-container
          image: osamasholi/hive-box-hivebox:latest
          ports:
            - containerPort: 5000
