k8s/hive-box-app.yaml
kind: Pod
apiVersion: v1
metadata:
  name: hive-box-app
  labels:
    app: hive-box
spec:
  containers:
    - command:
      image: ghcr.io/osama-sholi/hive-box/hive-box:main
      name: hive-box-app
      ports:
        - containerPort: 5000
