k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hive-box
spec:
  selector:
    app: hive-box
  type: NodePort
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30080
